--- a/front/src/pages/PerfilEdit/styles.css
+++ b/front/src/pages/PerfilEdit/styles.css
@@ -4,7 +4,7 @@
     font-family: "Poppins", sans-serif;
   }
   
-  .All-content {
+  .All-content-PerfilEdit {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,13 +23,13 @@
     border: 0.9px solid rgba(0, 0, 0, 0.604);
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.638);
   }
-  .menu{
+  .menu-PerfilEdit{
     display: flex;
     width: 100%;
   }
   
-  .container-first-content,
-  .container-second-content {
+  .container-first-content-PerfilEdit,
+  .container-second-content-PerfilEdit {
     flex: 1;
     text-align: center;
   }
@@ -54,14 +54,14 @@
   }
   
 
-  .custom-file-input {
+  .custom-file-input-PerfilEdit {
     opacity: 0;
     position: absolute;
     width: 0;
     height: 0;
   }
   
-  .custom-file-label {
+  .custom-file-label-PerfilEdit {
     display: inline-block;
     background-color: #ffffff;
     width: 90px;
@@ -72,7 +72,7 @@
     cursor: pointer;
   }
   
-  .custom-file-label::before {
+  .custom-file-label-PerfilEdit::before {
     content: "+";
     color: rgba(115, 83, 186, 1);
     font-size: 70px;
@@ -88,7 +88,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
-  .addPhoto {
+  .addPhoto-PerfilEdit {
     color: rgba(115, 83, 186, 1);
     background: transparent !important;
     font-weight: bold;
@@ -187,12 +187,30 @@
     font-weight: bold;
     color: #ffffff;
   }
-  .divButton{
+  .divButton-PerfilEdit{
     margin-top: 5%;
   }
-  .perfilProfissional{
+  .perfilProfissional-PerfilEdit{
     font-weight: bold;
   }
+  .divDeleteAccount-edit {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    height: 50px;
+  }
+  
+  .deleteAccount-edit {
+    border-radius: 20px;
+    background-color: rgba(166, 38, 38, 1);
+    color: #ffffff;
+    font-weight: bold;
+    padding: 0.5%;
+    height: 25px;
+    margin-right: 2%;
+    margin-top: 5%;
+  }
+  
   
   
   
