--- a/front/src/pages/PerfilEdit/styles.css
+++ b/front/src/pages/PerfilEdit/styles.css
@@ -23,6 +23,7 @@
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.638);
   background-color: rgba(240, 248, 255, 0.766);
 }
+
 /*Menu content*/
 .menu-edit{
   display: flex;
@@ -69,6 +70,7 @@
   color: rgba(115, 83, 186, 1);
   transform: translate(-50%, -50%);
 }
+
 .addPhoto-edit {
   background: transparent !important;
   font-weight: bold;
@@ -110,6 +112,7 @@
 .input-weightHight-edit::value {
   color: rgba(115, 83, 186, 1);
 }
+
 /*switch*/
 .switch {
   position: relative;
@@ -122,7 +125,6 @@
   opacity: 0;
   width: 0;
   height: 0;
-
 }
 
 .slider {
@@ -166,23 +168,30 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
 /*button config*/
-.DivprofessionalProfile {
+.divprofessionalProfile {
   margin-top: 15px;
 }
 
 .divButton{
   margin-top: 5%;
 }
+
 .professionalProfile{
   font-weight: bold;
+} 
+
+.divButton-edit{
+ margin-top: 5%;
 }
+
 .divDeleteAccount-edit {
     display: flex;
     justify-content: flex-end;
     width: 100%;
     height: 50px;
-  }
+}
   
 .deleteAccount-edit {
     border-radius: 20px;
@@ -193,7 +202,13 @@ input:checked + .slider:before {
     height: 25px;
     margin-right: 2%;
     margin-top: 5%;
-  }
+    cursor: pointer;
+
+}
+.deleteAccount-edit:hover {
+    background-color:#ffffff ; 
+    color: rgba(166, 38, 38, 1);
+}
   
   
   
