--- a/front/src/pages/PerfilEdit/styles.css
+++ b/front/src/pages/PerfilEdit/styles.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
 }
-/*All content*/
+
+/* All content */
 .All-content-edit {
   display: flex;
   justify-content: center;
@@ -11,7 +14,7 @@
 }
 
 .container-edit-content {
-  margin-top: 5%;
+  margin-top: 8%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -24,16 +27,19 @@
   background-color: rgba(240, 248, 255, 0.766);
 }
 
-/*Menu content*/
-.menu-edit{
+/* Menu content */
+.menu-edit {
   display: flex;
-  width: 100%;
+  width: 90%;
+  margin-bottom: 5%;
 }
 
 .container-first-content-edit,
 .container-second-content-edit {
-  flex: 1;
+  margin-top: 5vw;
   text-align: center;
+  width: 50%;
+  height: 100%;
 }
 
 .custom-file-input-edit {
@@ -44,25 +50,27 @@
 }
 
 .custom-file-label-edit {
+  margin-top: 1%;
+  width: 8vw;
+  height: 8vw;
   display: inline-block;
-  width: 90px;
-  height: 90px;
   padding: 10px;
   border-radius: 50%;
   border: 0.9px solid rgba(115, 83, 186, 1);
   background-color: #ffffff;
   cursor: pointer;
+  text-align: left;
 }
 
 .custom-file-label-edit::before {
-  content: "+";
-  font-size: 70px;
-  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 5vw;
-  height: 5vw;
+  width: 7vw;
+  height: 7vw;
+  content: "+";
+  font-size: 7vw;
+  border-radius: 50%;
   position: relative;
   top: 50%;
   left: 50%;
@@ -72,6 +80,7 @@
 }
 
 .addPhoto-edit {
+  margin-right: 6vw;
   background: transparent !important;
   font-weight: bold;
   color: rgba(115, 83, 186, 1);
@@ -79,12 +88,14 @@
 
 .input-edit {
   width: 70%;
-  padding: 5%;
+  padding: 2% 5% 3% 5%;
+  height:3vw;
   font-weight: bold;
   color: rgba(115, 83, 186, 1);
   border-bottom: 1px solid rgb(0, 0, 0);
   background-color: transparent;
   background: transparent !important;
+  font-size: 0.8vw;
 }
 
 .input-edit::placeholder {
@@ -95,17 +106,42 @@
   color: rgba(115, 83, 186, 1);
 }
 
-.input-weightHight-edit {
-  padding: 5%;
+.input-weight-edit {
+  font-size: 0.8vw;
+  color: black;
   background-color: transparent;
   color: rgba(115, 83, 186, 1);
   background: transparent !important;
   font-weight: bold;
   border-bottom: 1px solid rgb(0, 0, 0);
-  width: 35%;
+  width: 33%;
+  height: 100%;
+  height: 50px;
+
 }
 
-.input-weightHight-edit::placeholder {
+.input-hight-edit {
+  font-size: 0.8vw;
+  color: black;
+  background-color: transparent;
+  color: rgba(115, 83, 186, 1);
+  background: transparent !important;
+  font-weight: bold;
+  border-bottom: 1px solid rgb(0, 0, 0);
+  width: 34%;
+  height: 100%;
+  margin-left: 3%;
+  height: 50px;
+
+}
+
+.weightHight-edit{
+  margin-top: 2vw;
+  margin-bottom: -1.5vw;
+}
+
+.input-hight-edit::placeholder,
+.input-weight-edit::placeholder {
   color: rgb(0, 0, 0);
 }
 
@@ -113,12 +149,10 @@
   color: rgba(115, 83, 186, 1);
 }
 
-/*switch*/
+/* Switch */
 .switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 40px;
+  height: 24px;
 }
 
 .switch input {
@@ -135,19 +169,17 @@
   right: 0;
   bottom: 0;
   background-color: #919191;
-  -webkit-transition: .4s;
   transition: .4s;
 }
 
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
+  height: 16px;
+  width: 16px;
+  left: 2px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: .4s;
   transition: .4s;
 }
 
@@ -156,9 +188,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  transform: translateX(18px);
 }
 
 .slider.round {
@@ -169,47 +199,52 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-/*button config*/
-.divprofessionalProfile {
-  margin-top: 15px;
+/* Button config */
+.diveditprofessionalProfile {
+  width: 70%;
+  padding: 8% 5% 3% 5%;
+  background-color: transparent;
+  background: transparent !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
 }
 
-.divButton{
-  margin-top: 5%;
-}
-
-.professionalProfile{
+.editprofessionalProfile {
+  font-size: 0.8vw;
   font-weight: bold;
-} 
+}
 
-.divButton-edit{
- margin-top: 5%;
+.divButton-edit {
+  margin-top: 5%;
+  width: 100%;
+  height: 8vw;
 }
 
 .divDeleteAccount-edit {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    height: 50px;
+  display: flex;
+  margin-right: 5%;
+  justify-content: flex-end;
+  width: 100%;
+  height: 50px;
 }
-  
-.deleteAccount-edit {
-    border-radius: 20px;
-    background-color: rgba(166, 38, 38, 1);
-    color: #ffffff;
-    font-weight: bold;
-    padding: 0.5%;
-    height: 25px;
-    margin-right: 2%;
-    margin-top: 5%;
-    cursor: pointer;
 
+.deleteAccount-edit {
+  border-radius: 20px;
+  background-color: rgba(166, 38, 38, 1);
+  color: #ffffff;
+  font-weight: bold;
+  padding: 0.5%;
+  height: 25px;
+  margin-right: 2%;
+  margin-bottom: 6%;
+  cursor: pointer;
 }
+
 .deleteAccount-edit:hover {
-    background-color:#ffffff ; 
-    color: rgba(166, 38, 38, 1);
+  background-color: #ffffff;
+  color: rgba(166, 38, 38, 1);
 }
-  
-  
-  
-  
+
+
