--- a/front/src/pages/Register/styles.css
+++ b/front/src/pages/Register/styles.css
@@ -1,118 +1,153 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
+
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
 
-  /*All content*/
-  .All-content-register {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .container-register-content {
-    margin-top: 5%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 38vw;
-    width: 60vw;
-    border-radius: 25px;
-    border: 0.9px solid rgba(0, 0, 0, 0.604);
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.638);
-    background-color: rgba(240, 248, 255, 0.766);
-  }
+/* All content */
+.All-content-register {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  /*Menu content*/
-  .menu-register{
-    display: flex;
-    width: 100%;
-  }
-  
-  .container-first-content-register,
-  .container-second-content-register {
-    flex: 1;
-    text-align: center;
-  }
+.container-register-content {
+  margin-top: 8%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 38vw;
+  width: 60vw;
+  border-radius: 25px;
+  border: 0.9px solid rgba(0, 0, 0, 0.604);
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.638);
+  background-color: rgba(240, 248, 255, 0.766);
+}
 
-  .custom-file-input-register {
-    position: absolute;
-    width: 0;
-    height: 0;
-    opacity: 0;
-  }
+  /* Menu content */
+.menu-register {
+  display: flex;
+  width: 90%;
+  margin-bottom: 5%;
+}
+
+.container-first-content-register,
+.container-second-content-register {
+  margin-top: 5vw;
+  text-align: center;
+  width: 50%;
+  height: 100%;
+}
+
+.custom-file-input-register {
+  position: absolute;
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+.custom-file-label-register {
+  margin-top: 1%;
+  width: 8vw;
+  height: 8vw;
+  display: inline-block;
+  padding: 10px;
+  border-radius: 50%;
+  border: 0.9px solid rgba(115, 83, 186, 1);
+  background-color: #ffffff;
+  cursor: pointer;
+  text-align: left;
+}
+
+.custom-file-label-register::before {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 7vw;
+  height: 7vw;
+  content: "+";
+  font-size: 7vw;
+  border-radius: 50%;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  background-color: rgb(144, 144, 144);
+  color: rgba(115, 83, 186, 1);
+  transform: translate(-50%, -50%);
+}
+
+.addPhoto-register {
+  margin-right: 6vw;
+  background: transparent !important;
+  font-weight: bold;
+  color: rgba(115, 83, 186, 1);
+}
   
-  .custom-file-label-register {
-    display: inline-block;
-    width: 90px;
-    height: 90px;
-    padding: 10px;
-    border-radius: 50%;
-    border: 0.9px solid rgba(115, 83, 186, 1);
-    background-color: #ffffff;
-    cursor: pointer;
-  }
+.input-register {
+  width: 70%;
+  padding: 2% 5% 3% 5%;
+  height:3vw;
+  font-weight: bold;
+  color: rgba(115, 83, 186, 1);
+  border-bottom: 1px solid rgb(0, 0, 0);
+  background-color: transparent;
+  background: transparent !important;
+  font-size: 0.8vw;
+}
   
-  .custom-file-label-register::before {
-    content: "+";
-    font-size: 70px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 5vw;
-    height: 5vw;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    background-color: rgb(144, 144, 144);
-    color: rgba(115, 83, 186, 1);
-    transform: translate(-50%, -50%);
-  }
-  
-  .addPhoto-register {
-    background: transparent !important;
-    font-weight: bold;
-    color: rgba(115, 83, 186, 1);
-  }
-  
-  .input-register {
-    width: 70%;
-    padding: 5%;
-    font-weight: bold;
-    color: rgba(115, 83, 186, 1);
-    border-bottom: 1px solid rgb(0, 0, 0);
-    background-color: transparent;
-    background: transparent !important;
-  }
-  
-  .input-register::placeholder {
-    color: rgb(0, 0, 0);
-  }
-  
-  .input-register::value {
-    color: rgba(115, 83, 186, 1);
-  }
-  
-  .input-weightHight-register {
-    padding: 5%;
-    background-color: transparent;
-    color: rgba(115, 83, 186, 1);
-    background: transparent !important;
-    font-weight: bold;
-    border-bottom: 1px solid rgb(0, 0, 0);
-    width: 35%;
-  }
-  
-  .input-weightHight-register::placeholder {
-    color: rgb(0, 0, 0);
-  }
-  
-  .input-weightHight-register::value {
-    color: rgba(115, 83, 186, 1);
-  }
+.input-register::placeholder {
+  color: rgb(0, 0, 0);
+}
+
+.input-register::value {
+  color: rgba(115, 83, 186, 1);
+}
+
+.input-weight-register {
+  font-size: 0.8vw;
+  color: black;
+  background-color: transparent;
+  color: rgba(115, 83, 186, 1);
+  background: transparent !important;
+  font-weight: bold;
+  border-bottom: 1px solid rgb(0, 0, 0);
+  width: 33%;
+  height: 100%;
+  height: 50px;
+
+}
+
+.input-hight-register {
+  font-size: 0.8vw;
+  color: black;
+  background-color: transparent;
+  color: rgba(115, 83, 186, 1);
+  background: transparent !important;
+  font-weight: bold;
+  border-bottom: 1px solid rgb(0, 0, 0);
+  width: 34%;
+  height: 100%;
+  margin-left: 3%;
+  height: 50px;
+
+}
+
+.weightHight-register{
+  margin-top: 2vw;
+  margin-bottom: -1.5vw;
+}
+
+.input-hight-register::placeholder,
+.input-weight-register::placeholder {
+  color: rgb(0, 0, 0);
+}
+
+.input-weightHight-register::value {
+  color: rgba(115, 83, 186, 1);
+}
 
   /*switch*/
   .switch {
@@ -171,16 +206,63 @@
   }
   
  /*button config*/
-  .divprofessionalProfile {
-    margin-top: 15px;
-  }
-
   .divButton{
-    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 8vw;
   }
-  .professionalProfile{
+  .registerprofessionalProfile{
     font-weight: bold;
+    font-size: 0.8vw;
   }
+  
+  .professionalProfile {
+    font-size: 0.8vw;
+  }
+  
+
+
+  /* Button config */
+.divregisterprofessionalProfile {
+  width: 70%;
+  padding: 8% 5% 3% 5%;
+  background-color: transparent;
+  background: transparent !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+}
+
+
+.professionalProfile {
+  font-size: 0.8vw;
+}
+
+/* Button config */
+.diveditprofessionalProfile {
+  width: 70%;
+  padding: 8% 5% 3% 5%;
+  background-color: transparent;
+  background: transparent !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+}
+
+.editprofessionalProfile {
+  font-size: 0.8vw;
+  font-weight: bold;
+}
+
+.divButton-edit {
+
+}
+
+
   
   
   
