--- a/front/src/pages/Profile/styles.css
+++ b/front/src/pages/Profile/styles.css
@@ -1,3 +1,19 @@
+.structure-profile{
+  display: flex;
+}
+
+.structure-carrossel{
+  position: absolute;
+  right: 0.1rem;
+  width: 30vw;
+  height: 88vh;
+  overflow: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
 .container-profile{
   font-family: "Poppins", sans-serif;
   width: 75vw;
