--- a/front/src/pages/ContactsAndRequests/styles.css
+++ b/front/src/pages/ContactsAndRequests/styles.css
@@ -3,15 +3,36 @@
 }
 .container-contacts-request {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  gap: 1.8rem;
+  /* justify-content: space-evenly; */
+  align-items: center;
   color: #000000;
   font-family: "Poppins", sans-serif;
   height: 85%;
 }
-/* problema com essa altura */
+
+.search-box{
+  height: 2.5rem;
+  width: 25rem;
+  background-color: #DCDDDF;
+  border-radius: 2rem;
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+}
+
+.search-text{
+  border: none;
+  background: none;
+  outline: none;
+  font-size: 1rem;
+  width: 100%;
+}
 
 .content-contacts {
-  width: 50rem;
+  width: 48rem;
+  height: 32rem;
   /* padding: 0 2rem; */
   color: black;
   background-color: #ffffffd5;
@@ -21,28 +42,26 @@
   border-radius: 25px;
 }
 
-.container-titles-contacts{
+.container-titles-contacts {
   width: 100%;
   display: flex;
   justify-content: space-around;
   font-weight: 500;
-  /* padding: 1.5rem 2.5rem 0.5rem 2.5rem; */
-
 }
 
-.titles-line{
+.titles-line {
   width: 1px;
   height: 2rem;
   background-color: #000000;
 }
 
-.contacts-line{
+.contacts-line {
   width: 95%;
   height: 1px;
   background-color: #000000;
 }
 
-.title-contacts{
+.title-contacts {
   width: 50%;
   height: 4rem;
   display: flex;
@@ -51,87 +70,129 @@
   transition: transform ease-in-out 0.4s;
 }
 
-.title-content-right{
+.title-content-right {
   border-left: 1px solid black;
 }
 
-.title-content-left:hover{
+.title-content-left.active {
   border-top-left-radius: 25px;
-  cursor: pointer;
-  background-color: #bea5f8;
-}
-.title-content-right:hover{
-  border-top-right-radius: 25px;
-  cursor: pointer;
   background-color: #bea5f8;
 }
 
-.container-contact-cards{
+.title-content-right.active {
+  border-top-right-radius: 25px;
+  background-color: #bea5f8;
+}
+
+.title-content-left:hover {
+  cursor: pointer;
+  font-size: 1.2rem;
+  
+}
+.title-content-right:hover {
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.container-contact-cards {
   width: 100%;
-  display: grid; 
+  display: grid;
   grid-template-columns: 50% 50%;
   justify-items: center;
   grid-auto-rows: 100px;
   align-items: center;
   overflow-y: auto;
   padding-top: 1rem;
-
-  /* column-count: 2; 
-  column-gap: 1rem;  */
-  /* padding: 2rem 0rem 0rem 5.5rem; */
 }
 
-.contact-card{
+.contact-card {
   width: 250px;
+  height: 65px;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  gap: 1rem;
   align-items: center;
   background-color: #ffffff;
   border: 1px solid #000000;
   border-radius: 1rem;
-
 }
-.contact-card:hover{
+.contact-card:hover {
   background-color: #e0e0e0;
   cursor: pointer;
-
 }
 
-.icon-add-contact{
+.img-card-contacts {
+  width: 30%;
+  height: 100%;
+}
+.img-card-contacts img {
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: 16px;
+  border-bottom-left-radius: 16px;
+}
+
+.user-contacts-info {
+  width: 45%;
+}
+.username-contact {
+  font-weight: 500;
+  font-size: 0.8rem;
+  white-space: nowrap;
+}
+.useroccupation-contact {
+  color: #64748b;
+  font-size: 0.7rem;
+  white-space: nowrap;
+}
+
+.container-icon-contact {
   padding-right: 1rem;
-}
-.icon-add-contact:hover{
-  scale: 1.1
-}
-
-
-.img-card-contacts{
-  width:90px;
-  /* overflow: hidden; */
-}
-.img-card-contacts img{
-  width:100%;
-  border-top-left-radius: 25px;
-}
-/* 
-.logo-name {
   display: flex;
-  flex-direction: column;
-  font-size: 3rem;
+  gap: 0.7rem;
 }
 
-.logo-name-git {
-  padding-right: 1rem;
+.icon-add-contact:hover,
+.icon-remove-contact:hover {
+  scale: 1.2;
 }
 
-.logo-name-fit {
-  padding-left: 1rem;
+/* Estilizando a barra de rolagem */
+::-webkit-scrollbar {
+  width: 8px; 
 }
 
-.text-info {
-  font-size: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  gap: 2rem;
-} */
+/* Estilizando o thumb (indicador de posição) da barra de rolagem */
+::-webkit-scrollbar-thumb {
+  background-color: #888; 
+  border-radius: 4px; 
+}
+
+/* Estilizando a área da barra de rolagem que não é ocupada pelo thumb */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 4px; 
+}
+
+@media  (max-width: 780px) {
+  .content-contacts {
+    width: 25rem;
+  }
+  .container-titles-contacts {
+    flex-direction: column;
+  }
+  .title-contacts{
+    width: 100%;
+  }
+  .container-contact-cards {
+    grid-template-columns: 100%;
+  }
+  .title-content-left.active {
+    border-top-right-radius: 25px;
+  }
+  
+  .title-content-right.active {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+  }
+}
