--- a/front/src/pages/FullCards/styles.css
+++ b/front/src/pages/FullCards/styles.css
@@ -89,6 +89,7 @@
   color: white;
   width: 90%;
   padding: 1rem;
+  height: 75%;
 }
 
 .body_training_card h3{
@@ -102,8 +103,23 @@
 
 .daily_training_check, .daily_meal_check{
   width: 90%;
+  height: 15%;
   display: flex;
   justify-content: end;
+}
+
+.edit_form_meal, .edit_form_training{
+  width: 90%;
+  height: 15%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 1rem;
+}
+
+.edit_form_meal input, .edit_form_training input{
+  width: 60%;
+  border-radius: 5rem;
+  padding: 0.5rem;
 }
 
 .daily_training_checkbox, .daily_meal_checkbox{
@@ -114,7 +130,7 @@
 .body_meal_card{
   color: white;
   width: 80%;
-  height: 60%;
+  height: 75%;
   padding: 1rem;
   display: flex;
   justify-content: space-between;
