--- a/front/src/pages/ContactsAndRequests/styles.css
+++ b/front/src/pages/ContactsAndRequests/styles.css
@@ -12,17 +12,17 @@
   height: 85%;
 }
 
-.search-box{
+.search-box {
   height: 2.5rem;
   width: 25rem;
-  background-color: #DCDDDF;
+  background-color: #dcdddf;
   border-radius: 2rem;
   display: flex;
   align-items: center;
   padding-left: 1rem;
 }
 
-.search-text{
+.search-text {
   border: none;
   background: none;
   outline: none;
@@ -87,7 +87,6 @@
 .title-content-left:hover {
   cursor: pointer;
   font-size: 1.2rem;
-  
 }
 .title-content-right:hover {
   font-size: 1.2rem;
@@ -150,6 +149,8 @@
   padding-right: 1rem;
   display: flex;
   gap: 0.7rem;
+  width: 4.5rem;
+  min-width: 4.5rem;
 }
 
 .icon-add-contact:hover,
@@ -159,29 +160,29 @@
 
 /* Estilizando a barra de rolagem */
 ::-webkit-scrollbar {
-  width: 8px; 
+  width: 8px;
 }
 
 /* Estilizando o thumb (indicador de posição) da barra de rolagem */
 ::-webkit-scrollbar-thumb {
-  background-color: #888; 
-  border-radius: 4px; 
+  background-color: #888;
+  border-radius: 4px;
 }
 
 /* Estilizando a área da barra de rolagem que não é ocupada pelo thumb */
 ::-webkit-scrollbar-track {
   background-color: #f1f1f1;
-  border-radius: 4px; 
+  border-radius: 4px;
 }
 
-@media  (max-width: 780px) {
+@media (max-width: 780px) {
   .content-contacts {
     width: 25rem;
   }
   .container-titles-contacts {
     flex-direction: column;
   }
-  .title-contacts{
+  .title-contacts {
     width: 100%;
   }
   .container-contact-cards {
@@ -190,7 +191,7 @@
   .title-content-left.active {
     border-top-right-radius: 25px;
   }
-  
+
   .title-content-right.active {
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
