--- a/front/src/pages/FullCards/styles.css
+++ b/front/src/pages/FullCards/styles.css
@@ -90,6 +90,7 @@
   width: 90%;
   padding: 1rem;
   height: 75%;
+  overflow: scroll;
 }
 
 .body_training_card h3{
@@ -103,9 +104,14 @@
 
 .daily_training_check, .daily_meal_check{
   width: 90%;
-  height: 15%;
+  height: 25%;
   display: flex;
   justify-content: end;
+  align-items: center;
+}
+
+.daily_training_check Button, .daily_meal_check Button{
+  margin-right: 30%;
 }
 
 .edit_form_meal, .edit_form_training{
@@ -122,9 +128,49 @@
   padding: 0.5rem;
 }
 
+.add_form_meal input{
+  width: 50%;
+  border-radius: 5rem;
+  padding: 0.5rem;
+}
+
 .daily_training_checkbox, .daily_meal_checkbox{
   width: 1.2rem;
   height: 1.2rem;
+}
+
+.body_training_card ul li {
+  position: relative;
+}
+
+.edit_buttons {
+  display: flex;
+  gap: 8px;
+}
+
+.button_edit_training{
+  width: 15px;
+  height: 15px;
+}
+
+.button_edit_training:active{
+  width: 14px;
+  height: 14px;
+  background-color: rgb(106, 99, 99);
+}
+
+.task_line, .meal_line{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.task_line p{
+  width: 36%;
+}
+
+.meal_line h3{
+  width: 80%;
 }
 
 .body_meal_card{
@@ -133,12 +179,12 @@
   height: 75%;
   padding: 1rem;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  overflow: scroll;
 }
 
 .body_meal_card h3{
   font-size: 0.8rem;
-  margin-bottom: 1rem;
 }
 
 .body_meal_card li{
