--- a/front/src/pages/FullCards/styles.css
+++ b/front/src/pages/FullCards/styles.css
@@ -190,3 +190,30 @@
 .body_meal_card li{
   font-size: 0.8rem;
 }
+
+.structure-minicarrossel{
+  position: absolute;
+  left: 93vw;
+  top: 10vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.message_box{
+  width: 25vw;
+  height: 40vw;
+  border: 1px solid black;
+  background-color: #151b22e7;
+  border-radius: 2.5rem;
+  margin-left: 70px;
+  align-self: center;
+}
+
+.buttoncarrossel{
+  margin: 15px;
+  width: 50px;
+  height: 50px;
+  background-color: aliceblue;
+  border-radius: 50%;
+  align-self: flex-end;
+}
