--- a/front/src/components/DailyCard/styles.css
+++ b/front/src/components/DailyCard/styles.css
@@ -1,7 +1,7 @@
 .structure-daily-card{
     margin-bottom: 1rem;
-    width: 23vw;
-    height: 16vw;
+    width: 95%;
+    height: 15rem;
     background-color: #151b228f;
     border: 2px solid rgb(255, 255, 255);
     border-radius: 1.5rem;
