--- a/front/src/components/ProgressBar/styles.css
+++ b/front/src/components/ProgressBar/styles.css
@@ -4,9 +4,8 @@
 }
 
 .title-bar{
-    font-size: 1vw;
     background-color: #C7D3EB;
-    height: 20px;
+    height: 50%;
     width: 20%;
     margin-left: 20px;
     border-top-left-radius: 25rem;
@@ -14,6 +13,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.title-bar h4{
+  font-size: 90%;
 }
 
 .progress-bar {
